--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Weather App</title>
   </head>
   <body>
@@ -21,23 +25,26 @@
         ><br />
         <input type="text" class="form-control py-3" name="location" />
       </form>
-      <div class=" card shadow-lg d-none rounded">
-        <img src="https://placehold.co/400x300" class="time card-img-top" alt="" />
+      <div class="card shadow-lg d-none rounded">
+        <img
+          src="https://placehold.co/400x300"
+          class="time card-img-top"
+          alt=""
+        />
         <div class="icon bg-light mx-auto text-center">
-            <!-- icon -->
-            <img src="" alt="">
-            
+          <!-- icon -->
+          <img src="" alt="" />
         </div>
 
         <div class="details text-uppercase">
           <h5 class="my-3">city name</h5>
-        <div class="my-3">Weather Condition</div>
-        <div class="display-4 my-3">
+          <div class="my-3">Weather Condition</div>
+          <div class="display-4 my-3">
             <span>temp</span>
             <span>&deg;C</span>
+          </div>
         </div>
-        </div>
-    </div>
+      </div>
     </div>
 
     <script src="script/forcast.js"></script>
